[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mimo-defi-health"
version = "0.1.0"
description = "Real-Time DeFi Protocol Health Monitor powered by Xiaomi MiMo V2.5 long-chain reasoning"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "mimo-defi-health contributors" },
]
keywords = ["defi", "monitoring", "mimo", "xiaomi", "blockchain", "risk", "health"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "structlog>=24.1.0",
    "tenacity>=8.2.0",
    "aiosqlite>=0.19.0",
]

[project.optional-dependencies]
slack = ["slack-sdk>=3.27.0"]
telegram = ["httpx>=0.27.0"]
all = [
    "slack-sdk>=3.27.0",
    "httpx>=0.27.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "respx>=0.21.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/your-username/mimo-defi-health"
Repository = "https://github.com/your-username/mimo-defi-health"
Issues = "https://github.com/your-username/mimo-defi-health/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mimo_defi_health"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "TCH"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
